SOLR-14456: Fix Content-Type header forwarding on compressed requests (#1480)
Co-authored-by: Samuel García Martínez <samuelgma@inditex.com>